[MODINVOICE-537] Avoid code smells